Edit grant types to make 'neartermism' vs 'animal welfare' explicit

--- a/open_phil_grants_analysis.ipynb
+++ b/open_phil_grants_analysis.ipynb
@@ -86,10 +86,10 @@
     "    \"Land Use Reform\",\n",
     "}\n",
     "\n",
-    "# For the purpose of this analysis, we include \"other areas\" in global health, and we remove science supporting\n",
+    "# For the purpose of this analysis, we include \"other areas\" in neartermism, and we remove science supporting\n",
     "# biosecurity, because that's arguably longtermist. I'm not sure why Open Phil includes that under its Global Health\n",
-    "# umbrella.\n",
-    "GLOBAL_HEALTH_EXCLUDING_ANIMAL_WELFARE = (GLOBAL_HEALTH_AND_WELLBEING | OTHER_AREAS) - {\"Science Supporting Biosecurity and Pandemic Preparedness\"}"
+    "# and Wellbeing umbrella.\n",
+    "NEARTERMISM_EXCLUDING_ANIMAL_WELFARE = (GLOBAL_HEALTH_AND_WELLBEING | OTHER_AREAS) - {\"Science Supporting Biosecurity and Pandemic Preparedness\"}"
    ]
   },
   {
@@ -99,10 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_health_excluding_animal_welfare = df[df.focus_area.isin(GLOBAL_HEALTH_EXCLUDING_ANIMAL_WELFARE)].groupby(\"year\").amount.sum()\n",
+    "neartermism_excluding_animal_welfare = df[df.focus_area.isin(NEARTERMISM_EXCLUDING_ANIMAL_WELFARE)].groupby(\"year\").amount.sum()\n",
     "animal_welfare = df[df.focus_area.isin(ANIMAL_WELFARE)].groupby(\"year\").amount.sum()\n",
-    "global_health = global_health_excluding_animal_welfare + animal_welfare\n",
-    "animal_welfare_proportion = animal_welfare / global_health"
+    "neartermism = neartermism_excluding_animal_welfare + animal_welfare\n",
+    "animal_welfare_proportion = animal_welfare / neartermism"
    ]
   },
   {
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Amount granted to global health INCLUDING animal welfare:\n"
+      "Amount granted to neartermist causes INCLUDING animal welfare:\n"
      ]
     },
     {
@@ -123,11 +123,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_68b8e\">\n",
+       "<table id=\"T_7aeb8\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_68b8e_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_7aeb8_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -136,38 +136,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_68b8e_row0_col0\" class=\"data row0 col0\" >$115,267,639</td>\n",
+       "      <th id=\"T_7aeb8_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_7aeb8_row0_col0\" class=\"data row0 col0\" >$115,267,639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_68b8e_row1_col0\" class=\"data row1 col0\" >$227,464,721</td>\n",
+       "      <th id=\"T_7aeb8_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_7aeb8_row1_col0\" class=\"data row1 col0\" >$227,464,721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_68b8e_row2_col0\" class=\"data row2 col0\" >$152,617,517</td>\n",
+       "      <th id=\"T_7aeb8_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_7aeb8_row2_col0\" class=\"data row2 col0\" >$152,617,517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_68b8e_row3_col0\" class=\"data row3 col0\" >$185,764,922</td>\n",
+       "      <th id=\"T_7aeb8_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_7aeb8_row3_col0\" class=\"data row3 col0\" >$185,764,922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_68b8e_row4_col0\" class=\"data row4 col0\" >$211,165,126</td>\n",
+       "      <th id=\"T_7aeb8_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_7aeb8_row4_col0\" class=\"data row4 col0\" >$211,165,126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_68b8e_row5_col0\" class=\"data row5 col0\" >$342,441,431</td>\n",
+       "      <th id=\"T_7aeb8_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_7aeb8_row5_col0\" class=\"data row5 col0\" >$342,441,431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_68b8e_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_68b8e_row6_col0\" class=\"data row6 col0\" >$384,041,075</td>\n",
+       "      <th id=\"T_7aeb8_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_7aeb8_row6_col0\" class=\"data row6 col0\" >$384,041,075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9e70bafed0>"
+       "<pandas.io.formats.style.Styler at 0x7f0a231f75d0>"
       ]
      },
      "execution_count": 4,
@@ -176,8 +176,8 @@
     }
    ],
    "source": [
-    "print(\"Amount granted to global health INCLUDING animal welfare:\")\n",
-    "global_health.to_frame().style.format(dict(amount=\"${:,}\"))"
+    "print(\"Amount granted to neartermist causes INCLUDING animal welfare:\")\n",
+    "neartermism.to_frame().style.format(dict(amount=\"${:,}\"))"
    ]
   },
   {
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Amount granted to global health EXCLUDING animal welfare:\n"
+      "Amount granted to neartermist causes EXCLUDING animal welfare:\n"
      ]
     },
     {
@@ -198,11 +198,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_9b84c\">\n",
+       "<table id=\"T_122f0\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_9b84c_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_122f0_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -211,38 +211,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_9b84c_row0_col0\" class=\"data row0 col0\" >$100,831,369</td>\n",
+       "      <th id=\"T_122f0_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_122f0_row0_col0\" class=\"data row0 col0\" >$100,831,369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_9b84c_row1_col0\" class=\"data row1 col0\" >$199,927,170</td>\n",
+       "      <th id=\"T_122f0_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_122f0_row1_col0\" class=\"data row1 col0\" >$199,927,170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_9b84c_row2_col0\" class=\"data row2 col0\" >$124,640,028</td>\n",
+       "      <th id=\"T_122f0_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_122f0_row2_col0\" class=\"data row2 col0\" >$124,640,028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_9b84c_row3_col0\" class=\"data row3 col0\" >$145,869,786</td>\n",
+       "      <th id=\"T_122f0_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_122f0_row3_col0\" class=\"data row3 col0\" >$145,869,786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_9b84c_row4_col0\" class=\"data row4 col0\" >$185,755,868</td>\n",
+       "      <th id=\"T_122f0_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_122f0_row4_col0\" class=\"data row4 col0\" >$185,755,868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_9b84c_row5_col0\" class=\"data row5 col0\" >$276,394,125</td>\n",
+       "      <th id=\"T_122f0_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_122f0_row5_col0\" class=\"data row5 col0\" >$276,394,125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b84c_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_9b84c_row6_col0\" class=\"data row6 col0\" >$300,916,433</td>\n",
+       "      <th id=\"T_122f0_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_122f0_row6_col0\" class=\"data row6 col0\" >$300,916,433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9e70d1a250>"
+       "<pandas.io.formats.style.Styler at 0x7f0a23156510>"
       ]
      },
      "execution_count": 5,
@@ -251,8 +251,8 @@
     }
    ],
    "source": [
-    "print(\"Amount granted to global health EXCLUDING animal welfare:\")\n",
-    "global_health_excluding_animal_welfare.to_frame().style.format(dict(amount=\"${:,}\"))"
+    "print(\"Amount granted to neartermist causes EXCLUDING animal welfare:\")\n",
+    "neartermism_excluding_animal_welfare.to_frame().style.format(dict(amount=\"${:,}\"))"
    ]
   },
   {
@@ -273,11 +273,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_d6810\">\n",
+       "<table id=\"T_ae197\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d6810_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_ae197_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -286,38 +286,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_d6810_row0_col0\" class=\"data row0 col0\" >$14,436,270</td>\n",
+       "      <th id=\"T_ae197_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_ae197_row0_col0\" class=\"data row0 col0\" >$14,436,270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_d6810_row1_col0\" class=\"data row1 col0\" >$27,537,551</td>\n",
+       "      <th id=\"T_ae197_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_ae197_row1_col0\" class=\"data row1 col0\" >$27,537,551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_d6810_row2_col0\" class=\"data row2 col0\" >$27,977,489</td>\n",
+       "      <th id=\"T_ae197_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_ae197_row2_col0\" class=\"data row2 col0\" >$27,977,489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_d6810_row3_col0\" class=\"data row3 col0\" >$39,895,136</td>\n",
+       "      <th id=\"T_ae197_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_ae197_row3_col0\" class=\"data row3 col0\" >$39,895,136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_d6810_row4_col0\" class=\"data row4 col0\" >$25,409,258</td>\n",
+       "      <th id=\"T_ae197_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_ae197_row4_col0\" class=\"data row4 col0\" >$25,409,258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_d6810_row5_col0\" class=\"data row5 col0\" >$66,047,306</td>\n",
+       "      <th id=\"T_ae197_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_ae197_row5_col0\" class=\"data row5 col0\" >$66,047,306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d6810_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_d6810_row6_col0\" class=\"data row6 col0\" >$83,124,642</td>\n",
+       "      <th id=\"T_ae197_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_ae197_row6_col0\" class=\"data row6 col0\" >$83,124,642</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9e70b0f690>"
+       "<pandas.io.formats.style.Styler at 0x7f0a23151490>"
       ]
      },
      "execution_count": 6,
@@ -340,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of global health funding allocated to animal welfare:\n"
+      "Percentage of neartermist funding allocated to animal welfare:\n"
      ]
     },
     {
@@ -348,11 +348,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_a5228\">\n",
+       "<table id=\"T_8362c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a5228_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_8362c_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -361,38 +361,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_a5228_row0_col0\" class=\"data row0 col0\" >12.52%</td>\n",
+       "      <th id=\"T_8362c_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_8362c_row0_col0\" class=\"data row0 col0\" >12.52%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_a5228_row1_col0\" class=\"data row1 col0\" >12.11%</td>\n",
+       "      <th id=\"T_8362c_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_8362c_row1_col0\" class=\"data row1 col0\" >12.11%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_a5228_row2_col0\" class=\"data row2 col0\" >18.33%</td>\n",
+       "      <th id=\"T_8362c_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_8362c_row2_col0\" class=\"data row2 col0\" >18.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_a5228_row3_col0\" class=\"data row3 col0\" >21.48%</td>\n",
+       "      <th id=\"T_8362c_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_8362c_row3_col0\" class=\"data row3 col0\" >21.48%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_a5228_row4_col0\" class=\"data row4 col0\" >12.03%</td>\n",
+       "      <th id=\"T_8362c_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_8362c_row4_col0\" class=\"data row4 col0\" >12.03%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_a5228_row5_col0\" class=\"data row5 col0\" >19.29%</td>\n",
+       "      <th id=\"T_8362c_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_8362c_row5_col0\" class=\"data row5 col0\" >19.29%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a5228_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_a5228_row6_col0\" class=\"data row6 col0\" >21.64%</td>\n",
+       "      <th id=\"T_8362c_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_8362c_row6_col0\" class=\"data row6 col0\" >21.64%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9e70b0fe50>"
+       "<pandas.io.formats.style.Styler at 0x7f0a2314d9d0>"
       ]
      },
      "execution_count": 7,
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "print(\"Percentage of global health funding allocated to animal welfare:\")\n",
+    "print(\"Percentage of neartermist funding allocated to animal welfare:\")\n",
     "animal_welfare_proportion.to_frame().style.format(dict(amount=\"{:.2%}\"))"
    ]
   },
@@ -415,13 +415,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean percentage of global health funding allocated to animal welfare: 16.77%\n"
+      "Mean percentage of neartermist funding allocated to animal welfare: 16.77%\n"
      ]
     }
    ],
    "source": [
     "mean_proportion = animal_welfare_proportion.mean()\n",
-    "print(f\"Mean percentage of global health funding allocated to animal welfare: {mean_proportion:.2%}\")"
+    "print(f\"Mean percentage of neartermist funding allocated to animal welfare: {mean_proportion:.2%}\")"
    ]
   },
   {
