--- a/open_phil_grants_analysis.ipynb
+++ b/open_phil_grants_analysis.ipynb
@@ -123,11 +123,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_5eba9\">\n",
+       "<table id=\"T_c9fb4\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_5eba9_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_c9fb4_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -136,38 +136,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_5eba9_row0_col0\" class=\"data row0 col0\" >$115,267,639</td>\n",
+       "      <th id=\"T_c9fb4_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_c9fb4_row0_col0\" class=\"data row0 col0\" >$115,267,639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_5eba9_row1_col0\" class=\"data row1 col0\" >$227,464,721</td>\n",
+       "      <th id=\"T_c9fb4_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_c9fb4_row1_col0\" class=\"data row1 col0\" >$227,464,721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_5eba9_row2_col0\" class=\"data row2 col0\" >$152,617,517</td>\n",
+       "      <th id=\"T_c9fb4_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_c9fb4_row2_col0\" class=\"data row2 col0\" >$152,617,517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_5eba9_row3_col0\" class=\"data row3 col0\" >$185,764,922</td>\n",
+       "      <th id=\"T_c9fb4_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_c9fb4_row3_col0\" class=\"data row3 col0\" >$185,764,922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_5eba9_row4_col0\" class=\"data row4 col0\" >$211,165,126</td>\n",
+       "      <th id=\"T_c9fb4_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_c9fb4_row4_col0\" class=\"data row4 col0\" >$211,165,126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_5eba9_row5_col0\" class=\"data row5 col0\" >$342,441,431</td>\n",
+       "      <th id=\"T_c9fb4_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_c9fb4_row5_col0\" class=\"data row5 col0\" >$342,441,431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5eba9_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_5eba9_row6_col0\" class=\"data row6 col0\" >$384,041,075</td>\n",
+       "      <th id=\"T_c9fb4_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_c9fb4_row6_col0\" class=\"data row6 col0\" >$384,041,075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0cd0e59f60>"
+       "<pandas.io.formats.style.Styler at 0x7efe49e3f3d0>"
       ]
      },
      "execution_count": 4,
@@ -198,11 +198,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_96a53\">\n",
+       "<table id=\"T_8393c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_96a53_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_8393c_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -211,38 +211,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_96a53_row0_col0\" class=\"data row0 col0\" >$100,831,369</td>\n",
+       "      <th id=\"T_8393c_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_8393c_row0_col0\" class=\"data row0 col0\" >$100,831,369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_96a53_row1_col0\" class=\"data row1 col0\" >$199,927,170</td>\n",
+       "      <th id=\"T_8393c_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_8393c_row1_col0\" class=\"data row1 col0\" >$199,927,170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_96a53_row2_col0\" class=\"data row2 col0\" >$124,640,028</td>\n",
+       "      <th id=\"T_8393c_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_8393c_row2_col0\" class=\"data row2 col0\" >$124,640,028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_96a53_row3_col0\" class=\"data row3 col0\" >$145,869,786</td>\n",
+       "      <th id=\"T_8393c_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_8393c_row3_col0\" class=\"data row3 col0\" >$145,869,786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_96a53_row4_col0\" class=\"data row4 col0\" >$185,755,868</td>\n",
+       "      <th id=\"T_8393c_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_8393c_row4_col0\" class=\"data row4 col0\" >$185,755,868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_96a53_row5_col0\" class=\"data row5 col0\" >$276,394,125</td>\n",
+       "      <th id=\"T_8393c_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_8393c_row5_col0\" class=\"data row5 col0\" >$276,394,125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_96a53_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_96a53_row6_col0\" class=\"data row6 col0\" >$300,916,433</td>\n",
+       "      <th id=\"T_8393c_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_8393c_row6_col0\" class=\"data row6 col0\" >$300,916,433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0ccf463760>"
+       "<pandas.io.formats.style.Styler at 0x7efe4846afb0>"
       ]
      },
      "execution_count": 5,
@@ -273,11 +273,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_65e8d\">\n",
+       "<table id=\"T_f3ecf\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_65e8d_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_f3ecf_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -286,38 +286,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_65e8d_row0_col0\" class=\"data row0 col0\" >$14,436,270</td>\n",
+       "      <th id=\"T_f3ecf_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_f3ecf_row0_col0\" class=\"data row0 col0\" >$14,436,270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_65e8d_row1_col0\" class=\"data row1 col0\" >$27,537,551</td>\n",
+       "      <th id=\"T_f3ecf_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_f3ecf_row1_col0\" class=\"data row1 col0\" >$27,537,551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_65e8d_row2_col0\" class=\"data row2 col0\" >$27,977,489</td>\n",
+       "      <th id=\"T_f3ecf_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_f3ecf_row2_col0\" class=\"data row2 col0\" >$27,977,489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_65e8d_row3_col0\" class=\"data row3 col0\" >$39,895,136</td>\n",
+       "      <th id=\"T_f3ecf_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_f3ecf_row3_col0\" class=\"data row3 col0\" >$39,895,136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_65e8d_row4_col0\" class=\"data row4 col0\" >$25,409,258</td>\n",
+       "      <th id=\"T_f3ecf_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_f3ecf_row4_col0\" class=\"data row4 col0\" >$25,409,258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_65e8d_row5_col0\" class=\"data row5 col0\" >$66,047,306</td>\n",
+       "      <th id=\"T_f3ecf_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_f3ecf_row5_col0\" class=\"data row5 col0\" >$66,047,306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_65e8d_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_65e8d_row6_col0\" class=\"data row6 col0\" >$83,124,642</td>\n",
+       "      <th id=\"T_f3ecf_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_f3ecf_row6_col0\" class=\"data row6 col0\" >$83,124,642</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0ccf463700>"
+       "<pandas.io.formats.style.Styler at 0x7efea8372b90>"
       ]
      },
      "execution_count": 6,
@@ -348,11 +348,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_b766a\">\n",
+       "<table id=\"T_77112\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b766a_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_77112_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -361,38 +361,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_b766a_row0_col0\" class=\"data row0 col0\" >12.52%</td>\n",
+       "      <th id=\"T_77112_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_77112_row0_col0\" class=\"data row0 col0\" >12.52%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_b766a_row1_col0\" class=\"data row1 col0\" >12.11%</td>\n",
+       "      <th id=\"T_77112_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_77112_row1_col0\" class=\"data row1 col0\" >12.11%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_b766a_row2_col0\" class=\"data row2 col0\" >18.33%</td>\n",
+       "      <th id=\"T_77112_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_77112_row2_col0\" class=\"data row2 col0\" >18.33%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_b766a_row3_col0\" class=\"data row3 col0\" >21.48%</td>\n",
+       "      <th id=\"T_77112_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_77112_row3_col0\" class=\"data row3 col0\" >21.48%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_b766a_row4_col0\" class=\"data row4 col0\" >12.03%</td>\n",
+       "      <th id=\"T_77112_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_77112_row4_col0\" class=\"data row4 col0\" >12.03%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_b766a_row5_col0\" class=\"data row5 col0\" >19.29%</td>\n",
+       "      <th id=\"T_77112_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_77112_row5_col0\" class=\"data row5 col0\" >19.29%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b766a_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_b766a_row6_col0\" class=\"data row6 col0\" >21.64%</td>\n",
+       "      <th id=\"T_77112_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_77112_row6_col0\" class=\"data row6 col0\" >21.64%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0ccf4a0850>"
+       "<pandas.io.formats.style.Styler at 0x7efe484ac880>"
       ]
      },
      "execution_count": 7,
@@ -512,7 +512,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean percentage of longtermist funding allocated to AI x-risk: 16.77%\n"
+      "Mean percentage of longtermist funding allocated to AI x-risk: 37.68%\n"
      ]
     },
     {
@@ -520,11 +520,11 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_f73bf\">\n",
+       "<table id=\"T_d8007\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_f73bf_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
+       "      <th id=\"T_d8007_level0_col0\" class=\"col_heading level0 col0\" >amount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >year</th>\n",
@@ -533,38 +533,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
-       "      <td id=\"T_f73bf_row0_col0\" class=\"data row0 col0\" >37.66%</td>\n",
+       "      <th id=\"T_d8007_level0_row0\" class=\"row_heading level0 row0\" >2016</th>\n",
+       "      <td id=\"T_d8007_row0_col0\" class=\"data row0 col0\" >37.66%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
-       "      <td id=\"T_f73bf_row1_col0\" class=\"data row1 col0\" >50.76%</td>\n",
+       "      <th id=\"T_d8007_level0_row1\" class=\"row_heading level0 row1\" >2017</th>\n",
+       "      <td id=\"T_d8007_row1_col0\" class=\"data row1 col0\" >50.76%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
-       "      <td id=\"T_f73bf_row2_col0\" class=\"data row2 col0\" >10.28%</td>\n",
+       "      <th id=\"T_d8007_level0_row2\" class=\"row_heading level0 row2\" >2018</th>\n",
+       "      <td id=\"T_d8007_row2_col0\" class=\"data row2 col0\" >10.28%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
-       "      <td id=\"T_f73bf_row3_col0\" class=\"data row3 col0\" >55.99%</td>\n",
+       "      <th id=\"T_d8007_level0_row3\" class=\"row_heading level0 row3\" >2019</th>\n",
+       "      <td id=\"T_d8007_row3_col0\" class=\"data row3 col0\" >55.99%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
-       "      <td id=\"T_f73bf_row4_col0\" class=\"data row4 col0\" >22.88%</td>\n",
+       "      <th id=\"T_d8007_level0_row4\" class=\"row_heading level0 row4\" >2020</th>\n",
+       "      <td id=\"T_d8007_row4_col0\" class=\"data row4 col0\" >22.88%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
-       "      <td id=\"T_f73bf_row5_col0\" class=\"data row5 col0\" >53.07%</td>\n",
+       "      <th id=\"T_d8007_level0_row5\" class=\"row_heading level0 row5\" >2021</th>\n",
+       "      <td id=\"T_d8007_row5_col0\" class=\"data row5 col0\" >53.07%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f73bf_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
-       "      <td id=\"T_f73bf_row6_col0\" class=\"data row6 col0\" >33.12%</td>\n",
+       "      <th id=\"T_d8007_level0_row6\" class=\"row_heading level0 row6\" >2022</th>\n",
+       "      <td id=\"T_d8007_row6_col0\" class=\"data row6 col0\" >33.12%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0ccf4a1090>"
+       "<pandas.io.formats.style.Styler at 0x7efe484acf10>"
       ]
      },
      "execution_count": 12,
@@ -573,6 +573,7 @@
     }
    ],
    "source": [
+    "mean_proportion = ai_x_risk_proportion.mean()\n",
     "print(f\"Mean percentage of longtermist funding allocated to AI x-risk: {mean_proportion:.2%}\")\n",
     "ai_x_risk_proportion.to_frame().style.format(dict(amount=\"{:.2%}\"))"
    ]
